--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "seeder": "node utils/seeder.js"
+    "seeder": "node utils/seeder.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client && npm run seeder --prefix server"
   },
   "author": "",
   "license": "ISC",
